@@ -4,6 +4,7 @@ python-apt (0.8.0~exp2) UNRELEASED; urgency=low
   * aptsources: Allow insertion of new multi-arch entries
   * aptsources: Various cleanup work
   * all: Fix all instances of ResourceWarning about unclosed files
+  * tests/test_apt_cache.py: Use assertTrue() instead of assert_()
 
  -- Julian Andres Klode <jak@debian.org>  Wed, 06 Apr 2011 09:46:52 +0200
 
